== 3/Dec/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b75.zip V1.6-b75] ==

''' Squeezebox '''

Fixes no status messages  [ticket:681]

''' Jetty '''

Can now specify IP addresses that will not be prompted for a user name and password. Add a file IPs.xml to the datafile directory and add the IP addresses to the full_function section.
Resolves [ticket:667]

Clients are included in the normal client session count security.

{{{
<ip_list>
	<full_function>
		<ip value="127.0.0.1" />
	</full_function>
	
	<post_only>
			<ip value="192.16.1.11" />
	</post_only>
</ip_list>

}}}

== 3/Dec/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b74.zip V1.6-b74] ==

''' Scripts '''

Groovy scripts modified to allow multiple scripts listening for the same trigger. 
Groovy scripts can now be triggered by a combination of display name and command instead of just display name. 

For example
{{{
	String[]  fireOnChange =   ["BLINDS:down"]

or

	String[]  fireOnChange =   ["BLINDS"]

}}}

''' Variables section in config_ref '''

Corrected spelling of Latitude.
Added HOLIDAY_MODE to indicate when people are away, allows scripts to react differently.

Resolves issue [ticket:679],[ticket:677]


== 23/Nov/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b73.zip V1.6-b73] ==

''' Squeezebox '''

Updated track list. 

== 23/Nov/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b72.zip V1.6-b72] ==

''' Squeezebox '''

Added track list. ticket [ticket:678], [ticket:674]

== 22/Nov/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b71.zip V1.6-b71]  [attachment:wiki:SoftwareReleases:eLife-1.6b71-libs.zip Libs-V1.6b71]  ==

''' Libraries '''

Updated Jetty to 6.1.6

''' Squeezebox '''
Incoprorated latest changes. ticket [ticket:662]


== 12/Nov/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b70.zip V1.6-b70]  [attachment:wiki:SoftwareReleases:eLife-1.6b70-libs.zip Libs-V1.6b70]  ==

''' CBUS '''
