@@ -1,4 +1,4 @@
-#Wed Dec 12 19:09:31 EST 2007
+#Tue Dec 18 19:06:29 EST 2007
 major_version=1.6b
-minor_version=76
+minor_version=77
 app_name=eLife
